# portfolio_chatbot

./: .gitignore  CHECKLIST.md  README.md
.github/workflows/: ci.yml  update_prompt.yml
backend/: prompt_config.py  pyproject.toml
backend/app/: main.py  models.py  prompt_store.py  session_manager.py  state.py
backend/app/api/: chat.py  prompt.py
backend/tools/: crawl_and_patch.py  last_hash.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: ChatWidget.tsx
