[tool.poetry]
name = "portfolio-chatbot"
version = "0.1.0"
description = ""
authors = ["sakata325 <saka75199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = "^2.11.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
google-genai = "^1.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
